--- a/custom_builds/3/distros/10.x/pom.xml
+++ b/custom_builds/3/distros/10.x/pom.xml
@@ -122,7 +122,8 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>warehouse</module>
-                <!--module>bigbluebutton-sakai/bbb-tool</module-->
+                <module>kaltura</module>
+                <!--module>bbb-tool</module-->
             </modules>
         </profile>
         <profile>
