--- a/custom_builds/159/providers/sakai-10.x/component/pom.xml
+++ b/custom_builds/159/providers/sakai-10.x/component/pom.xml
@@ -27,12 +27,11 @@
       <artifactId>sakai-sample-provider</artifactId>
     </dependency>
 <!-- -->
-<!-- Needed for the JLDAP Provider
+<!-- Needed for the JLDAP Provider -->
 		<dependency>
 			<groupId>org.sakaiproject</groupId>
 			<artifactId>sakai-jldap-provider</artifactId>
 		</dependency>
-		-->
 <!-- Needed for the Kerberos Provider
 		<dependency>
 			<groupId>org.sakaiproject</groupId>
