--- a/custom_builds/159/distros/sakai-10.x/pom.xml
+++ b/custom_builds/159/distros/sakai-10.x/pom.xml
@@ -85,7 +85,6 @@
                 <module>message</module>
                 <module>metaobj</module>
                 <module>msgcntr</module>
-                <module>osp</module>
                 <module>podcasts</module>
                 <module>polls</module>
                 <module>portal</module>
@@ -93,7 +92,6 @@
                 <module>presence</module>
                 <module>profile2</module>
                 <module>providers</module>
-                <module>reference</module>
                 <module>reset-pass</module>
                 <module>rights</module>
                 <module>roster2</module>
@@ -115,9 +113,15 @@
                 <module>userauditservice</module>
                 <module>usermembership</module>
                 <module>velocity</module>
-                <module>warehouse</module>
                 <module>web</module>
                 <module>webservices</module>
+
+                <module>cloud-content</module>
+                <module>jforum</module>
+                <module>gradebook2</module>
+                <module>etudes-util</module>
+                <module>melete</module>
+                <module>bbb-tool</module>
             </modules>
         </profile>
         <profile>
