--- a/custom_builds/74/distros/10.x/pom.xml
+++ b/custom_builds/74/distros/10.x/pom.xml
@@ -117,6 +117,7 @@
                 <module>bigbluebutton-sakai/bbb-tool</module>
 		<module>evaluation</module>
 		<module>da_evalprovider</module>
+		<module>cloud-content</module>
 	<!--	<module>kaltura</module> -->
             </modules>
         </profile>
