--- a/custom_builds/115/builds/10.x/pom.xml
+++ b/custom_builds/115/builds/10.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>blogwow</module>
                 <module>evaluation</module>
                 <module>gradebook-export</module>
+                <module>cloud-content</module>
             </modules>
         </profile>
         <profile>
