--- a/custom_builds/130/distros/10.x/pom.xml
+++ b/custom_builds/130/distros/10.x/pom.xml
@@ -120,6 +120,8 @@
                 <module>webservices</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
+                <module>cloud-content</module>
+                <module>bigbluebutton-sakai/bbb-tool</module>
             </modules>
         </profile>
         <profile>
