s3: svn merge -c323616 ^/msub/longsight.com/custom_builds/163/kernel

--- a/custom_builds/164/kernel/2.9.x/pom.xml
+++ b/custom_builds/164/kernel/2.9.x/pom.xml
@@ -436,7 +436,7 @@
             <id>rsmart</id>
             <name>Maven Repository Switchboard</name>
             <layout>default</layout>
-            <url>http://maven.rsmart.com/maven</url>
+            <url>http://maven.anisakai.com/maven</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
