--- a/custom_builds/164/distros/rsmart-2.9.5.5/pom.xml
+++ b/custom_builds/164/distros/rsmart-2.9.5.5/pom.xml
@@ -63,7 +63,7 @@
                 <module>cloud-content</module>
                 <module>common</module>
                 <module>config</module>
-                <module>config-viewer</module>
+                <!--module>config-viewer</module-->
                 <module>content</module>
                 <module>content-review</module>
                 <module>courier</module>
