--- a/custom_builds/165/distros/sakai-10.x/rsmart/google-content/google-content-impl/deploy/pom.xml
+++ b/custom_builds/165/distros/sakai-10.x/rsmart/google-content/google-content-impl/deploy/pom.xml
@@ -36,33 +36,33 @@
   <dependencies>
 
     <dependency>
-        <groupId>com.google.gdata</groupId>
+        <groupId>com.google.gdata.gdata-java-client</groupId>
         <artifactId>gdata-core-1.0</artifactId>
-        <version>1.41.5</version>
+        <version>1.42.0</version>
     </dependency>
 
     <dependency>
-      <groupId>com.google.gdata</groupId>
+      <groupId>com.google.gdata.gdata-java-client</groupId>
       <artifactId>gdata-client-1.0</artifactId>
-      <version>1.41.5</version>
+      <version>1.42.0</version>
     </dependency>
 
     <dependency>
-      <groupId>com.google.gdata</groupId>
+      <groupId>com.google.gdata.gdata-java-client</groupId>
       <artifactId>gdata-docs-3.0</artifactId>
-      <version>1.41.5</version>
+      <version>1.42.0</version>
     </dependency>
 
     <dependency>
-      <groupId>com.google.gdata</groupId>
+      <groupId>com.google.gdata.gdata-java-client</groupId>
       <artifactId>gdata-spreadsheet-3.0</artifactId>
-      <version>1.41.5</version>
+      <version>1.42.0</version>
     </dependency>
 
     <dependency>
-      <groupId>com.google.gdata</groupId>
+      <groupId>com.google.gdata.gdata-java-client</groupId>
       <artifactId>gdata-media-1.0</artifactId>
-      <version>1.41.5</version>
+      <version>1.42.0</version>
     </dependency>
 
       <dependency>
