--- a/custom_builds/165/distros/sakai-10.x/rsmart/google-content/api/pom.xml
+++ b/custom_builds/165/distros/sakai-10.x/rsmart/google-content/api/pom.xml
@@ -32,6 +32,12 @@
   <dependencies>
 
     <dependency>
+      <groupId>com.rsmart</groupId>
+      <artifactId>google-content-shaded</artifactId>
+      <version>10.4</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.sakaiproject.kernel</groupId>
       <artifactId>sakai-kernel-api</artifactId>
     </dependency>
@@ -41,19 +47,6 @@
       <artifactId>oauth-api</artifactId>
       <version>${sakai.version}</version>
       <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-        <groupId>com.google.apis</groupId>
-        <artifactId>google-api-services-drive</artifactId>
-        <version>v2-rev112-1.17.0-rc</version>
-        <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-        <groupId>com.fasterxml.jackson.core</groupId>
-        <artifactId>jackson-core</artifactId>
-        <version>2.4.2</version>
     </dependency>
 
   </dependencies>
