--- a/custom_builds/165/distros/sakai-10.x/rsmart/google-content/google-content-impl/deploy/pom.xml
+++ b/custom_builds/165/distros/sakai-10.x/rsmart/google-content/google-content-impl/deploy/pom.xml
@@ -1,35 +1,15 @@
 <?xml version="1.0"?>
-<!--
-  ~ Copyright 2011 The rSmart Group
-  ~
-  ~ The contents of this file are subject to the Mozilla Public License
-  ~ Version 1.1 (the "License"); you may not use this file except in
-  ~ compliance with the License. You may obtain a copy of the License at
-  ~ http://www.mozilla.org/MPL/
-  ~
-  ~ Software distributed under the License is distributed on an "AS IS"
-  ~ basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
-  ~ License for the specific language governing rights and limitations
-  ~ under the License.
-  ~
-  ~ Contributor(s): duffy
-  -->
-
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>google-content</artifactId>
     <groupId>com.rsmart</groupId>
     <version>10.4</version>
-    <relativePath>../../pom.xml</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
-  <name>Google-Content Shared Library Deployer</name>
-  <groupId>com.rsmart</groupId>
-  <artifactId>google-content-deploy</artifactId>
-  <inceptionYear>2010</inceptionYear>
-  <packaging>pom</packaging>
+  <name>Google Shaded Jar</name>
+  <artifactId>google-content-shaded</artifactId>
+  <packaging>jar</packaging>
   <properties>
     <deploy.target>shared</deploy.target>
   </properties>
@@ -112,7 +92,40 @@
           <artifactId>jackson-core</artifactId>
           <version>2.4.2</version>
       </dependency>
-
   </dependencies>
-  <build/>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <relocations>
+                <relocation>
+                  <pattern>com.google</pattern>
+                  <shadedPattern>com.shadedgoogle</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>com.fasterxml</pattern>
+                  <shadedPattern>com.shadedjackson</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.apache</pattern>
+                  <shadedPattern>org.shadedapache</shadedPattern>
+                </relocation>
+              </relocations>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
