--- a/custom_builds/155/distros/11.x/pom.xml
+++ b/custom_builds/155/distros/11.x/pom.xml
@@ -117,9 +117,8 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
-                <module>blogwow</module>
                 <module>clog</module>
-                <module>scorm</module>
+                <!--module>scorm</module-->
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
