--- a/kernel/kernel-10.x_backport/deploy/common/pom.xml
+++ b/kernel/kernel-10.x_backport/deploy/common/pom.xml
@@ -56,5 +56,24 @@
         <artifactId>slf4j-api</artifactId>
         <scope>compile</scope>
     </dependency>
+    <dependency>
+      <groupId>org.mariadb.jdbc</groupId>
+      <artifactId>mariadb-java-client</artifactId>
+    </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <!-- This profile isn't active by default, as we can't bundle the JAR due to license restrictions
+           but if you build with the mysql profile active then the JAR will get downloaded and deployed into
+           tomcat without you having to copy it seperately. -->
+      <id>mysql</id>
+      <dependencies>
+        <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
