Removing skin manager from build

--- a/custom_builds/167/distros/rsmart-10.x/pom.xml
+++ b/custom_builds/167/distros/rsmart-10.x/pom.xml
@@ -124,7 +124,7 @@
                 <module>search</module>
                 <module>sections</module>
                 <module>shortenedurl</module>
-                <module>skin-manager</module>
+                <!-- module>skin-manager</module -->
                 <module>signup</module>
                 <module>site</module>
                 <module>site-manage</module>
