Adding cloud-content to build

--- a/custom_builds/78/distros/sakai-10.x/pom.xml
+++ b/custom_builds/78/distros/sakai-10.x/pom.xml
@@ -77,6 +77,7 @@
                 <module>jobscheduler</module>
                 <module>jsf</module>
                 <module>kernel</module>
+                <module>cloud-content</module>
                 <module>lessonbuilder</module>
                 <module>login</module>
                 <module>mailarchive</module>
