--- a/custom_builds/10/distros/10.x/pom.xml
+++ b/custom_builds/10/distros/10.x/pom.xml
@@ -61,6 +61,7 @@
                 <module>citations</module>
                 <module>common</module>
                 <module>config</module>
+                <module>cloud-content</module>
                 <module>content</module>
                 <module>content-review</module>
                 <module>courier</module>
