Updating externals for certification

--- a/custom_builds/164/distros/rsmart-2.9.5.5/pom.xml
+++ b/custom_builds/164/distros/rsmart-2.9.5.5/pom.xml
@@ -126,7 +126,7 @@
                 <module>turnitin/contentreview-impl</module>
                 <module>scoring-service</module>
                 <module>irubric</module>
- 
+                <module>certification</module>
                 <!--
                 <module>EntityBrowser</module>
                 <module>iclicker</module>
