--- a/custom_builds/163/distros/sakai-10.x/pom.xml
+++ b/custom_builds/163/distros/sakai-10.x/pom.xml
@@ -122,6 +122,12 @@
                 <module>bbb-tool</module>
                 <module>gradebook2</module>
                 <module>jforum</module>
+
+                <module>rsmart/common</module>
+                <module>rsmart/util</module>
+                <module>rsmart/user</module>
+                <module>rsmart/user-data-service</module>
+                <module>rsmart/customer</module>
             </modules>
         </profile>
         <profile>
