--- a/custom_builds/164/certification/pom.xml
+++ b/custom_builds/164/certification/pom.xml
@@ -20,8 +20,8 @@
   <packaging>pom</packaging>
   <artifactId>certification-base</artifactId>
   <parent>
-    <artifactId>rsn-base</artifactId>
-    <groupId>com.rsmart</groupId>
+    <artifactId>base</artifactId>
+    <groupId>org.sakaiproject</groupId>
     <version>2.9.3</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
