added antivirus for kernel

--- a/custom_builds/164/distros/rsmart-2.9.5.5/pom.xml
+++ b/custom_builds/164/distros/rsmart-2.9.5.5/pom.xml
@@ -44,6 +44,7 @@
             <modules>
                 <module>master</module>
                 <module>rsmart/rsmart-Decryption</module>
+                <module>rsmart/antivirus</module>
                 <module>kernel</module>
                 <module>kernel-deploy</module>
                 <module>hybrid</module>
