--- a/custom_builds/168/distros/11.x/pom.xml
+++ b/custom_builds/168/distros/11.x/pom.xml
@@ -116,6 +116,10 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+
+                <module>commons</module>
+                <module>sakai-widgets</module>
+                <module>student-engagement</module>
             </modules>
         </profile>
         <profile>
