--- a/custom_builds/149/distros/11.x/pom.xml
+++ b/custom_builds/149/distros/11.x/pom.xml
@@ -117,10 +117,10 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
-                <module>blogwow</module>
+
+                <module>etudes-util</module>
+                <module>melete</module>
                 <module>evaluation</module>
-                <module>da_evalprovider</module>
-                <module>attendance</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
