added gb2 and certification

--- a/custom_builds/170/distros/11.x/pom.xml
+++ b/custom_builds/170/distros/11.x/pom.xml
@@ -120,6 +120,8 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>evaluation</module>
+                <module>certification</module>
+                <module>gradebook2</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
