Put kaltura into build

--- a/custom_builds/163/distros/sakai-10.x/pom.xml
+++ b/custom_builds/163/distros/sakai-10.x/pom.xml
@@ -123,6 +123,8 @@
                 <module>gradebook2</module>
                 <module>jforum</module>
 
+                <module>kaltura</module>
+                <module>evaluation</module>
                 <module>rsmart/common</module>
                 <module>rsmart/util</module>
                 <module>rsmart/user</module>
