--- a/custom_builds/104/distros/11.x/pom.xml
+++ b/custom_builds/104/distros/11.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>web</module>
                 <module>blogwow</module>
                 <module>webservices</module>
+                <module>bbb-tool</module>
             </modules>
         </profile>
         <profile>
