Sakai 11 singleton changes

--- a/custom_builds/155/rsmart/sakai-11.x/entitybroker/providers/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/155/rsmart/sakai-11.x/entitybroker/providers/src/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     <description>Asahi entity providers</description>
 
     <listener>
-        <listener-class>org.sakaiproject.util.ContextLoaderListener</listener-class>
+        <listener-class>org.sakaiproject.util.SakaiContextLoaderListener</listener-class>
     </listener>
 
 </web-app>
