--- a/custom_builds/155/rsmart/sakai-11.x/oauth/tool/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/155/rsmart/sakai-11.x/oauth/tool/src/webapp/WEB-INF/web.xml
@@ -107,7 +107,7 @@
     </servlet-mapping>
 
     <listener>
-        <listener-class>org.sakaiproject.util.ContextLoaderListener</listener-class>
+        <listener-class>org.sakaiproject.util.SakaiContextLoaderListener</listener-class>
     </listener>
 
     <listener>
