--- a/custom_builds/155/rsmart/sakai-11.x/google-content/tool/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/155/rsmart/sakai-11.x/google-content/tool/src/webapp/WEB-INF/web.xml
@@ -122,7 +122,7 @@
    </servlet>
 
    <listener>
-        <listener-class>org.sakaiproject.util.ContextLoaderListener</listener-class>
+        <listener-class>org.sakaiproject.util.SakaiContextLoaderListener</listener-class>
     </listener>
 
     <listener>
