--- a/custom_builds/155/rsmart/sakai-11.x/meleteDocs/meleteDocs-app/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/155/rsmart/sakai-11.x/meleteDocs/meleteDocs-app/src/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
       <servlet-name>MeleteResource</servlet-name>
    </filter-mapping>
    <listener>
-      <listener-class>org.sakaiproject.util.ContextLoaderListener</listener-class>
+      <listener-class>org.sakaiproject.util.SakaiContextLoaderListener</listener-class>
    </listener>
    <listener>
       <listener-class>org.sakaiproject.util.ToolListener</listener-class>
