--- a/custom_builds/155/rsmart/sakai-11.x/scorm/tool/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/155/rsmart/sakai-11.x/scorm/tool/src/webapp/WEB-INF/web.xml
@@ -62,7 +62,7 @@
    </servlet>
 
    <listener>
-        <listener-class>org.sakaiproject.util.ContextLoaderListener</listener-class>
+        <listener-class>org.sakaiproject.util.SakaiContextLoaderListener</listener-class>
     </listener>
 
     <listener>
