--- a/custom_builds/155/rsmart/sakai-11.x/smarthinking/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/155/rsmart/sakai-11.x/smarthinking/src/webapp/WEB-INF/web.xml
@@ -34,7 +34,7 @@
 -->
 
     <listener>
-        <listener-class>org.sakaiproject.util.ContextLoaderListener</listener-class>
+        <listener-class>org.sakaiproject.util.SakaiContextLoaderListener</listener-class>
     </listener>
 
     <servlet>
