--- a/custom_builds/155/rsmart/sakai-11.x/support-tool/support-tool-tool/src/webapp/WEB-INF/web.xml
+++ b/custom_builds/155/rsmart/sakai-11.x/support-tool/support-tool-tool/src/webapp/WEB-INF/web.xml
@@ -67,6 +67,6 @@
 
     <listener><listener-class>org.sakaiproject.util.ToolListener</listener-class></listener>
 
-     <listener><listener-class>org.sakaiproject.util.ContextLoaderListener</listener-class></listener>
+     <listener><listener-class>org.sakaiproject.util.SakaiContextLoaderListener</listener-class></listener>
 
 </web-app>
