add reference to build

--- a/custom_builds/168/distros/11.x/pom.xml
+++ b/custom_builds/168/distros/11.x/pom.xml
@@ -120,6 +120,7 @@
                 <module>sakai-widgets</module>
                 <module>student-engagement</module>
                 <module>content-review/contentreview-impl-vericite</module>
+                <module>reference</module>
             </modules>
         </profile>
         <profile>
