Update poms to 11.x

--- a/custom_builds/170/content-review/sakai-11.x/pom.xml
+++ b/custom_builds/170/content-review/sakai-11.x/pom.xml
@@ -16,6 +16,7 @@
   <modules>
     <module>content-review-api/model</module>
     <module>content-review-api/public</module>
+    <module>contentreview-impl</module>
     <module>contentreview-federated</module>
   </modules>
 
