--- a/custom_builds/142/distros/11.x/pom.xml
+++ b/custom_builds/142/distros/11.x/pom.xml
@@ -124,6 +124,7 @@
                 <module>kaltura</module>
                 <module>irubric-core</module>
                 <module>irubric-tool</module>
+                <module>SakaiXAPI-Provider</module>
                 <!--
                 <module>gradebook2</module>
                 -->
