--- a/custom_builds/170/distros/11.x/pom.xml
+++ b/custom_builds/170/distros/11.x/pom.xml
@@ -121,8 +121,11 @@
                 <module>melete</module>
                 <module>evaluation</module>
                 <module>certification</module>
+                <module>clog</module>
+                <!--
+                <module>rsmart</module>
                 <module>gradebook2</module>
-                <!-- module>rsmart</module -->
+                -->
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
