--- a/cloud-content/2.9.x/pom.xml
+++ b/cloud-content/2.9.x/pom.xml
@@ -4,14 +4,14 @@
   <parent>
     <groupId>org.sakaiproject</groupId>
     <artifactId>master</artifactId>
-    <version>2.9.3</version>
+    <version>2.9-SNAPSHOT</version>
     <relativePath>../master/pom.xml</relativePath>
   </parent>
 
   <name>Sakai Cloud Content Providers</name>
   <groupId>org.sakaiproject.content</groupId>
   <artifactId>cloud-content</artifactId>
-  <version>2.9.3</version>
+  <version>2.9-SNAPSHOT</version>
   <packaging>pom</packaging>
   <organization>
     <name>Sakai Foundation</name>
