cloud-content and kernel updates

--- a/custom_builds/31/distros/2.9.x/pom.xml
+++ b/custom_builds/31/distros/2.9.x/pom.xml
@@ -127,13 +127,16 @@
                 <module>velocity</module>
                 <module>warehouse</module>
                 <module>web</module>
-            	<!-- Custom -->
+
+                <module>cloud-content</module>
+            	<!-- Custom
 		<module>etudes-util</module>
 		<module>hierarchy</module>
 		<module>blogwow</module>
                 <module>EntityBrowser</module>
 		<module>evaluation</module>
 		<module>melete</module>
+                -->
 	    </modules>
         </profile>
         <profile>
