--- a/custom_builds/5/distros/10.x/pom.xml
+++ b/custom_builds/5/distros/10.x/pom.xml
@@ -121,6 +121,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>evaluation</module>
+                <module>cloud-content</module>
               <!--  <module>qna</module> -->
             </modules>
         </profile>
