--- a/custom_builds/8/distros/10.x/pom.xml
+++ b/custom_builds/8/distros/10.x/pom.xml
@@ -63,6 +63,7 @@
                 <module>config</module>
                 <module>content</module>
                 <module>content-review</module>
+                <module>cloud-content</module>
                 <module>courier</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
