updating to use s3 content delivery

--- a/custom_builds/44/distros/10.x/pom.xml
+++ b/custom_builds/44/distros/10.x/pom.xml
@@ -64,6 +64,7 @@
                 <module>config</module>
                 <module>content</module>
                 <module>content-review</module>
+                <module>cloud-content</module>
                 <module>courier</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
