--- a/custom_builds/7/distros/10.x/pom.xml
+++ b/custom_builds/7/distros/10.x/pom.xml
@@ -115,6 +115,7 @@
                 <module>web</module>
                 <module>webservices</module>
 
+                <module>cloud-content</module>
                 <module>blogwow</module>
                 <module>etudes-util</module>
                 <module>ltiContact</module>
