attendance and cleanup

--- a/custom_builds/6/distros/10.x/pom.xml
+++ b/custom_builds/6/distros/10.x/pom.xml
@@ -124,6 +124,7 @@
                 <module>melete</module>
                 <!-- module>iclicker</module -->
                 <!--module>bigbluebutton-sakai/bbb-tool</module -->
+                <module>attendance</module>
             </modules>
         </profile>
         <profile>
