--- a/custom_builds/167/distros/sakai-11.x/pom.xml
+++ b/custom_builds/167/distros/sakai-11.x/pom.xml
@@ -117,9 +117,7 @@
                 <module>web</module>
                 <module>webservices</module>
 
-                <module>etudes-util</module>
-                <module>melete</module>
-                <module>evaluation</module>
+                <module>gradebook2</module>
                 <module>rsmart</module>
             </modules>
         </profile>
