--- a/assignment/sakai-10.x-ani-branch-irubric/assignment-bundles/resources/assignment.properties
+++ b/assignment/sakai-10.x-ani-branch-irubric/assignment-bundles/resources/assignment.properties
@@ -959,3 +959,8 @@ settings.access.selectGroups = Note - You must select at least one group.
 selected.group = Selected Group
 selected.groups = Selected Groups
 submission.inline=Inline Submission
+
+scoringAgent.grade=Grade with {0}
+scoringAgent.view=View with {0}
+scoringAgent.refresh=Refresh grade from {0}
+scoringAgent.refreshReminder=Grading... Click here to refresh grade
