Adding cloud-content

--- a/custom_builds/173/distros/eval-2.9.x/pom.xml
+++ b/custom_builds/173/distros/eval-2.9.x/pom.xml
@@ -75,6 +75,7 @@
                 <module>authz</module>
                 <module>config</module>
                 <module>content</module>
+                <module>cloud-content</module>
                 <module>courier</module>
                 <module>dav</module>
                 <module>login</module>
