--- a/custom_builds/173/distros/eval-2.9.x/pom.xml
+++ b/custom_builds/173/distros/eval-2.9.x/pom.xml
@@ -144,7 +144,7 @@
                 <!--module>gmt</module-->
 		<module>external-calendaring-service</module>
                 <module>gradebook</module>
-                <module>gradebook2</module>
+                <!--module>gradebook2</module-->
                 <module>help</module>
                 <module>hierarchy</module>
                 <module>hybrid</module>
