--- a/custom_builds/173/login/sakai-2.9.x-saml/login-tool/tool/pom.xml
+++ b/custom_builds/173/login/sakai-2.9.x-saml/login-tool/tool/pom.xml
@@ -142,83 +142,11 @@
             <artifactId>cas-client-core</artifactId>
             <version>3.2.1</version>
           </dependency>
-          <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring</artifactId>
-          </dependency>
-          <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>2.0.4</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-aop</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-beans</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.springframework</groupId>
-                    <artifactId>spring-context</artifactId>
-                </exclusion>
-                <exclusion>
-                     <groupId>org.springframework</groupId>
-                     <artifactId>spring-core</artifactId>
-                 </exclusion>
-                 <exclusion>
-                     <groupId>org.springframework</groupId>
-                     <artifactId>spring-support</artifactId>
-                 </exclusion>
-             </exclusions>
-           </dependency>
-        </dependencies>
-        <build>
-          <filters>
-            <filter>${basedir}/../../../../config/maven_profiles/${project.artifactId}/rsmart.properties</filter>
-          </filters>
-          <resources>
-            <resource>
-                <directory>${basedir}/src/webapp/WEB-INF</directory>
-                <includes>
-                    <include>web.xml</include>
-                </includes>
-                <filtering>true</filtering>
-                <targetPath>${project.build.directory}</targetPath>
-            </resource>
-            <resource>
-                <directory>${basedir}/../../../../config/maven_profiles/${project.artifactId}/resources</directory>
-                <includes>
-                    <include>*</include>
-                </includes>
-                <filtering>true</filtering>
-                <targetPath>${project.build.directory}/${project.artifactId}-${project.version}/WEB-INF</targetPath>
-            </resource>
-          </resources>
-          <plugins>
-            <plugin> 
-              <artifactId>maven-war-plugin</artifactId>
-              <configuration>
-                <webXml>${project.build.directory}/web.xml</webXml>
-              </configuration>
-            </plugin>
-          </plugins>
-        </build>
-    </profile>
-    <profile>
-        <id>shibboleth</id>
-        <activation>
-            <property>
-              <name>sakai-login-tool.shib</name>
-            </property>
-        </activation>
-        <dependencies>
-          <dependency>
-            <groupId>com.rsmart</groupId>
-            <artifactId>rsmart-shibboleth</artifactId>
-            <version>2.9.3</version>
-          </dependency>
+	<dependency>
+	    <groupId>org.springframework.security.extensions</groupId>
+	    <artifactId>spring-security-saml2-core</artifactId>
+	    <version>1.0.1.RELEASE</version>
+	</dependency>
           <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring</artifactId>
@@ -369,11 +297,6 @@
             <artifactId>cas-client-core</artifactId>
             <version>3.2.1</version>
           </dependency>
-      <dependency>
-        <groupId>com.rsmart</groupId>
-        <artifactId>rsmart-shibboleth</artifactId>
-        <version>2.9.3</version>
-      </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring</artifactId>
