--- a/custom_builds/97/distros/sakai-10.x/pom.xml
+++ b/custom_builds/97/distros/sakai-10.x/pom.xml
@@ -118,6 +118,7 @@
                 <module>etudes-util</module>
                 <module>melete</module>
                 <module>blogwow</module>
+                <module>attendance</module>
             </modules>
         </profile>
         <profile>
