Adding jforum and melete to build

--- a/custom_builds/171/distros/sakai-10.x/pom.xml
+++ b/custom_builds/171/distros/sakai-10.x/pom.xml
@@ -120,7 +120,9 @@
                 <module>webservices</module>
                 <module>blogwow</module>
                 <module>evaluation</module>
-                <module>bigbluebutton-sakai/bbb-tool</module>
+                <module>etudes-util</module>
+                <module>jforum</module>
+                <module>melete</module>
             </modules>
         </profile>
         <profile>
