--- a/custom_builds/171/distros/sakai-10.x/pom.xml
+++ b/custom_builds/171/distros/sakai-10.x/pom.xml
@@ -72,6 +72,7 @@
                 <module>entitybroker</module>
                 <module>external-calendaring-service</module>
                 <module>gradebook</module>
+                <module>gradebook2</module>
                 <module>help</module>
                 <module>hierarchy</module>
                 <module>jobscheduler</module>
