svn merge -r316975:325045 https://source.sakaiproject.org/svn/site-manage/branches/sakai-10.x

--- a/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
+++ b/site-manage/site-manage-10.x_custom/site-manage-tool/tool/src/bundle/sitesetupgeneric.properties
@@ -1,5 +1,7 @@
 #Java code
 java.allmy = All My Sites
+java.myActive = My Active Sites
+java.myInactive = My Inactive Sites
 java.my = My Workspace
 ### java.yoursite = Your site set up is complete. You may now add content to and then publish your site.
 java.nosites = No site(s) checked. Please check a site or sites.
@@ -1031,7 +1033,7 @@ editgroup.generallist = Site Member List
 editgroup.grouplist = Group Member List
 editgroup.titlemissing = You need to specify the group title.
 editgroup.removegroups = Delete Groups
-editgroup.groupdel.alert = Are you sure you want to delete the following groups?
+editgroup.groupdel.alert = Deleting a group is permanent. Tools using the selected group(s) may not behave correctly after deletion. It is recommended that you check whether tools are using these groups in your site before deleting them. Are you sure you want to delete the following group(s)?
 editgroup.site.permission.alert = You are not allowed to make changes to the site.
 editgroup.site.notfound.alert = Site not found.
 
