--- a/custom_builds/152/distros/sakai-11.x/pom.xml
+++ b/custom_builds/152/distros/sakai-11.x/pom.xml
@@ -118,8 +118,10 @@
 
                 <module>etudes-util</module>
                 <module>melete</module>
-                <module>evaluation</module>
+                <module>gradebook2</module>
                 <module>rsmart</module>
+                <module>irubric-core</module>
+                <module>irubric-tool</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
