adding gb2 to build

--- a/custom_builds/173/distros/sakai-10.x/pom.xml
+++ b/custom_builds/173/distros/sakai-10.x/pom.xml
@@ -83,7 +83,7 @@
                 <module>evaluation</module>
 		        <module>external-calendaring-service</module>
                 <module>gradebook</module>
-                <!--module>gradebook2</module-->
+                <module>gradebook2</module>
                 <module>help</module>
                 <module>hierarchy</module>
                 <module>iclicker</module>
