--- a/custom_builds/171/distros/sakai-10.x/pom.xml
+++ b/custom_builds/171/distros/sakai-10.x/pom.xml
@@ -124,6 +124,7 @@
                 <module>etudes-util</module>
                 <module>jforum</module>
                 <module>melete</module>
+                <module>clog</module>
             </modules>
         </profile>
         <profile>
