--- a/custom_builds/167/distros/sakai-11.x/pom.xml
+++ b/custom_builds/167/distros/sakai-11.x/pom.xml
@@ -115,6 +115,8 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+                <module>clog</module>
+                <module>evaluation</module>
 
                 <!--
                 <module>gradebook2</module>
