--- a/custom_builds/67/distros/11.x/pom.xml
+++ b/custom_builds/67/distros/11.x/pom.xml
@@ -59,9 +59,7 @@
                 <module>cloud-content</module>
                 <module>content</module>
                 <module>content-review</module>
-                <module>content-review/contentreview-impl-vericite</module>
                 <module>courier</module>
-                <module>dashboard</module>
                 <module>dav</module>
                 <module>delegatedaccess</module>
                 <module>deploy</module>
@@ -117,10 +115,11 @@
                 <module>velocity</module>
                 <module>web</module>
                 <module>webservices</module>
+
                 <module>blogwow</module>
                 <module>evaluation</module>
-                <module>da_evalprovider</module>
-                <module>attendance</module>
+                <module>bigbluebutton-sakai</module>
+                <module>adobeconnect</module>
             </modules>
         </profile>
         <!-- pack profiles for building release artifacts -->
